<resources>
    <string name="app_name">Nearby</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot">Forgot your password?</string>
    <string name="recover">Recover</string>

    <string name="al_user">Already user?</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="passwordconfirm">Confirm Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_customer">Add Customer</string>
    <string name="my_customer">My Customer</string>
    <string name="add_item">Add Item</string>
    <string name="add_product">Add Product</string>
    <string name="profiler">Profiler</string>
    <string name="offer">Offer</string>
    <string name="manage_customer">Manage Customer</string>
    <string name="manage_Product">Manage Product</string>
    <string name="order_list">Order List</string>
    <string name="review">Reviews</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="edit">Edit</string>
    <string name="phone">Phone</string>
    <string name="address_line">Address</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
    <string name="organization">Organization</string>
    <string name="last_step">Last Step</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="_404_reviewa_not_found">404 reviewa not found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="bill">Bill</string>
    <string name="quantity">Quantity</string>
    <string name="send_bill">send bill</string>
    <string name="add">add</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="more">More</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="organization_name">Organization Name</string>

</resources>
