<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profileNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:lines="3" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profileEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="3" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profileAddressEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line"
            android:inputType="textPostalAddress"
            android:lines="3" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/profileTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organization_name"
            android:inputType="textPersonName"
            android:lines="3" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/profileSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>