<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottomOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="Kartik Patel"
        android:textColor="@color/primaryText"
        android:textSize="22sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bottomOrderPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="₹3000"
        android:textColor="@color/secondaryText"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bottomOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Pending"
        android:textColor="@color/secondaryText"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/price"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondaryText" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bottomOrderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <Button
        android:elevation="4dp"
        android:text="@string/download_invoice"
        android:layout_margin="16dp"
        android:background="@drawable/button_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>