<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:padding="4dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_fragment_background"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameTV">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="4dp"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/secondaryText"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/profileEmailTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="4dp"
                android:src="@drawable/ic_phone_black_24dp"
                android:tint="@color/secondaryText"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/profilePhoneTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/profilePhoneEdit"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="4dp"
                android:src="@drawable/ic_home_black_24dp"
                android:tint="@color/secondaryText"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/profileAdd1TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/address_line"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/profileAdd1Edit"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:padding="4dp"
                android:src="@drawable/ic_title_black_24dp"
                android:tint="@color/secondaryText"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/profileTitleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/profileTitleEdit"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_edit_black_24dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/profileNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/profileLogoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/red_button_corner"
        android:text="@string/logout"
        android:textColor="@color/IndianRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>